--- a/src/index.css
+++ b/src/index.css
@@ -1,41 +1,72 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Serif:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Noto+Serif:wght@400;700&display=swap");
 
-:root{
-  --primary: #efb6b2;
-  --secondary: #4e4e4e;
-  --error: #ff4a4a;
+:root {
+	--primary: #efb6b2;
+	--secondary: #4e4e4e;
+	--error: #ff4a4a;
 }
 
 /* base styles & title */
-body{
-  font-family: "Noto Serif";
-  color: var(--secondary);
+body {
+	font-family: "Noto Serif";
+	color: var(--secondary);
 }
-.App{
-  max-width: 960px;
-  margin: 0 auto;
+.App {
+	max-width: 960px;
+	margin: 0 auto;
 }
-.title h1{
-  color: var(--primary);
-  font-size: 1.2rem;
-  letter-spacing: 2px;
-  font-weight: normal;
+.title h1 {
+	color: var(--primary);
+	font-size: 1.2rem;
+	letter-spacing: 2px;
+	font-weight: normal;
 }
-.title h2, .title p{
-  text-align: center;
+.title h2,
+.title p {
+	text-align: center;
 }
-.title h2{
-  margin-top: 60px;
-  font-size: 2.6rem;
+.title h2 {
+	margin-top: 60px;
+	font-size: 2.6rem;
 }
 
 /* upload form styles */
-
+form {
+	margin: 30px auto 10px;
+	text-align: center;
+}
+label input {
+	height: 0;
+	width: 0;
+	opacity: 0;
+}
+label {
+	display: block;
+	width: 30px;
+	height: 30px;
+	border: 1px solid var(--primary);
+	border-radius: 50%;
+	margin: 10px auto;
+	line-height: 30px;
+	color: var(--primary);
+	font-weight: bold;
+	font-size: 24px;
+}
+label:hover {
+	background: var(--primary);
+	color: white;
+	cursor: pointer;
+}
+.output {
+	height: 60px;
+	font-size: 0.8rem;
+}
+.error {
+	color: var(--error);
+}
 
 /* progress bar styles */
 
-
 /* image grid styles */
-
 
 /* modal styles */
