Added animation using Framer Motion package

--- a/src/index.css
+++ b/src/index.css
@@ -86,6 +86,7 @@ label:hover {
 	padding: 50% 0;
 	/* padding controls height, will always be perfectly square regardless of width */
 	position: relative;
+	opacity: 0.8;
 }
 
 .image-wrap img {
